--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: latest
-          name: Latest Build
+          name: ${{ github.ref_name }} (latest)
           files: |
             release/latest/CloudFileRelay-Setup-latest.dmg
             release/latest/CloudFileRelay-Setup-latest.exe
